<resources>
    <string name="app_name">Recent Updates</string>
    <string name="action_settings">Settings</string>
    <string name="titleText">Title</string>
    <string name="descriptionText">Description</string>
    <string name="linkText">Link</string>
    <string name="pubDateText">Publication Date</string>
    <string name="title_activity_main_menu">RSS Reader (S1433740)</string>
    <string name="recentUpdatesButton">Recent Updates</string>
    <string name="dateText">Date of Incident:</string>
    <string name="locationText">Location:</string>
    <string name="homeText">Traffic Scotland: RSS Reader</string>
    <string name="searchButton">Roadworks</string>
    <string name="plannedRoadworks">Planned Roadworks</string>
    <string name="title_activity_planned_roadworks">Planned Roadworks (S1433740)</string>
    <string name="title_activity_current_roadworks">CurrentRoadworks (S1433740)</string>
    <string name="title_activity_ambient_mode">AmbientMode</string>
    <string name="ambientModeButtonText">Ambient Mode</string>
</resources>
