<?xml version="1.0" encoding="utf-8"?>
<!--Kieran Brawley. Matric No:S1433740-->
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kieran.trafficrssprojectxmlpullparser.MainMenu"
    tools:showIn="@layout/activity_main_menu">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:id="@+id/recentUpdatesButton"
        android:text="@string/recentUpdatesButton"
        android:layout_above="@+id/plannedRoadworks"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_alignParentStart="true"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        android:id="@+id/currentRoadworks"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/recentUpdatesButton"
        android:layout_marginBottom="20dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:text="@string/plannedRoadworks"
        android:id="@+id/plannedRoadworks"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/recentUpdatesButton"
        android:layout_alignEnd="@+id/recentUpdatesButton"
        android:layout_marginBottom="20dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:text="@string/ambientModeButtonText"
        android:id="@+id/ambientModeButton"
        android:textAlignment="center"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_horizontal" />

</GridLayout>
